[project]
name = "ticktick-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.10.1",
    "dbt-duckdb>=1.9.4",
    "dbt-osmosis==1.1.14",
    "elementary-data[bigquery]>=0.19.5",
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6.3",
    "python-dotenv>=1.1.1",
    "requests-ratelimiter>=0.7.0",
    "do-not-install-this-package-001>=0.1.6",
]
